# UETRV_Pcore_doc

./: .readthedocs.yaml  README.md  Readme.md  pyproject.toml  requirements.txt  uetrv.py
docs/source/: conf.py  index.md
docs/source/design_document/: index.md
docs/source/notebooks/: tutorial.ipynb
docs/source/user_guide/: index.md
