[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "uetrv"
authors = [{name = "Graziella", email = "graziella@uetrv"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    "sphinx~=4.2.0",
    "myst_parser",
    "furo",
    "nbsphinx",
]
